@@ -1,0 +1,36 @@
+#!/bin/ksh93
+DATA=${ print \
+01 01 06 00 2f cf 81 55 00 00 08 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 0c c4 7a 9d \
+2e 5e 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 \
+00 00 00 00 00 00 00 00 00 00 00 00 63 82 53 63 \
+35 01 01 37 0a 01 03 06 0c 0f 11 1a 1c 28 77 3c \
+0e 4c 69 6e 75 78 20 69 70 63 6f 6e 66 69 67 52 \
+12 01 06 00 04 00 18 01 1c 02 08 00 06 50 57 a8 \
+cd af 80 ff \
+}
+
+# make sure we get the right stuff
+D=${.sh.file%/*}
+cd ${D%/*}
+LD_LIBRARY_PATH_64=.
+LD_LIBRARY_PATH=.
+
+DSTHOST="$1"
+
+./sendip -v -D h -d "0x${DATA// }" -S b \
+	-p ipv4 -ifd 1 -it 64 -ii 0 \
+	-is 0.0.0.0 -id 255.255.255.255 \
+	-p udp -us 68 -ud 67 \
+	${DSTHOST:-localhost}
